<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AnimalTypes$PlaceholderFragment"
    android:background="#ffffff"
    android:clickable="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#99CC00"
                android:layout_marginBottom="10dp"
                android:onClick="showAmphibianList">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageViewAmphibian"
                    android:src="@drawable/frog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/amphibians"
                    android:id="@+id/textViewAmphibian"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#FF8800"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:onClick="showBirdList">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageViewBird"
                    android:src="@drawable/bird" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/birds"
                    android:id="@+id/textViewBird"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#33B5E5"
                android:layout_marginBottom="10dp"
                android:onClick="showFishList">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageViewFish"
                    android:src="@drawable/fish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fish"
                    android:id="@+id/textViewFish"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#FF4444"
                android:layout_marginBottom="10dp"
                android:onClick="showMammalList">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageViewMamal"
                    android:src="@drawable/gorilla" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mammals"
                    android:id="@+id/textViewMamal"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#AA66CC"
                android:layout_marginBottom="10dp"
                android:onClick="showReptileList">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageViewReptile"
                    android:src="@drawable/lizard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reptiles"
                    android:id="@+id/textViewReptile"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
