<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ZooAttractions$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#b65415"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/elephant_2x"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/rivers_edge"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/ic_dialog_map"
                    android:paddingRight="5dp"
                    android:layout_marginTop="2dp"
                    android:onClick="showRiversEdgeOnMap" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Take a walk in the wild through this thrilling exhibit where elephants are at play, cheetahs dart across a dry plain and hyenas watch warily by!"
                    android:id="@+id/textView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#544f85"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:src="@drawable/gorilla"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/the_wild"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/ic_dialog_map"
                    android:onClick="showTheWildOnMap"
                    android:layout_marginTop="2dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="From the sub-Antarctic to tropical rain forests, see penguins, bears and great apes."
                    android:id="@+id/textView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#4c83c3"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/butterfly"
                    android:layout_marginTop="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/discovery_corner"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/ic_dialog_map"
                    android:onClick="showDiscoveryCornerOnMap"
                    android:layout_marginTop="2dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Pet friendly bunnies and goats. Follow a butterfly's wandering flight. Explore and play."
                    android:id="@+id/textView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#949a50"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/bird"
                    android:layout_marginTop="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/historic_hill"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:onClick="showHistoricHillOnMap"
                    android:src="@android:drawable/ic_dialog_map"
                    android:layout_marginTop="2dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="A lovely stroll through this area, with architecture of the 1920s, you'll see primates, birds and reptiles in modern habitats."
                    android:id="@+id/textView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#890127"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/camel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/red_rocks"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/ic_dialog_map"
                    android:onClick="showRedRocksOnMap"
                    android:layout_marginTop="2dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="See lions, tigers and other big cats keep watch on nearby zebras, giraffes and antelope in natural settings."
                    android:id="@+id/textView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#efa810"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lakeside_crossing"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/ic_dialog_map"
                    android:onClick="showLakesideOnMap"
                    android:layout_marginTop="2dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="From refreshments to souvenirs, you'll find everything you need to make your Zoo experience complete."
                    android:id="@+id/textView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
